B-F Sandbox Full-Backup/src/objects/Promotion__c.object
<CustomObject>
    <description>Used by CRM.
NPA Rollout: Used to store Promotions.</description>
    <fields>
        <fullName>AUD_Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Capacity_f__c</fullName>
        <description>INFOWELDERS</description>
        <formula>Account__r.Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Capacity (f)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Market__c</fullName>
        <formula>Account__r.Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Market (f)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Promotion__c</fullName>
        <description>Flag to indicate a Promotion is Active</description>
        <formula>IF(Promotion_Start_Date__c  &lt;= today()  &amp;&amp;  Promotion_End_Date__c  &gt;= today(), &quot;X&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Promotion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Mechanics__c</fullName>
        <label>Additional Mechanics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approached__c</fullName>
        <description>Number of people approached during the promotion</description>
        <inlineHelpText>Enter the number of people that were approached during the event</inlineHelpText>
        <label>Approached</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>INFOWELDERS</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accomplished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Banner_Group__c</fullName>
        <description>BFA Banner Groups</description>
        <label>Banner Group</label>
        <picklist>
            <picklistValues>
                <fullName>1ST CHOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 STAR CELLARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-11 GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.L.M.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCOR HOTELS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIRLINES/AIRPOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AJC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBION PARK CEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALH GROUP LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL SEASONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALM GOLD CLUBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPHA SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMATOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANSETT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUR FOODWORKS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVS CATERING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARGAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAR-GAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASIX LIQUOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG BARGAIN GRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLUE HILLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONUS LIQUOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOOTLEG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOOZE BROS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSS GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTTLEMART ADV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTTLEMART BUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTTLEMART EXPR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <formula>Brand_NPA__r.Brand_Code__c</formula>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <label>Brand Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_NPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NPA Rollout: Used to refer to the brand.</description>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>INFOWELDERS</description>
        <formula>Promotion_Activity__r.Brand__r.Name</formula>
        <inlineHelpText>Brand is tied to the selected promotion activity.</inlineHelpText>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_Period_End_Date__c</fullName>
        <label>Buy Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buy_Period_Start_Date__c</fullName>
        <label>Buy Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <inlineHelpText>It defaults to outlet channel unless channel is pubs then you pick on or off.</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>ON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_MobilePhone__c</fullName>
        <label>Contact_MobilePhone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact_Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Crew_Support__c</fullName>
        <description>INFOWELDERS</description>
        <label>Crew Support</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Duration__c</fullName>
        <inlineHelpText>The One off is for free stock and can only be used on one order.
On-Going start and end date appear.</inlineHelpText>
        <label>Deal Duration</label>
        <picklist>
            <picklistValues>
                <fullName>One Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Going (Till Next CPI?)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Draw_Date__c</fullName>
        <label>Draw Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>INFOWELDERS</description>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>English_Name__c</fullName>
        <formula>Account__r.English_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>English Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <description>Infowelders - Manual entry for estimated promotion cost; used only in markets using the simplified promotion layout.</description>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <label>Finance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promotions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>NPA Rollout: Stores the Fiscal Year. Year of ( current date + 8 months) will give the fiscal year</description>
        <formula>TEXT( IF(( MONTH( Promotion_Start_Date__c  ) + 8   &lt;= 12 ), YEAR(Promotion_Start_Date__c ), YEAR(Promotion_Start_Date__c) + 1))</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freeze_Date__c</fullName>
        <description>NPA Rollout: Stores the Freeze Date for the promotion</description>
        <label>Freeze Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTM_Channel_Code__c</fullName>
        <description>NPA Rollout: Stores the GTM Channel Code for the GTM Channel selected on the Promotion</description>
        <formula>LEFT( TEXT(GTM_Channel_Description__c) , (FIND(&apos;-&apos;,  TEXT( GTM_Channel_Description__c )) - 2))</formula>
        <label>GTM Channel Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTM_Channel_Description__c</fullName>
        <description>NPA Rollout: Stores the GTM Channel</description>
        <label>GTM Channel</label>
        <picklist>
            <controllingField>Promotion_Premise__c</controllingField>
            <picklistValues>
                <fullName>10 - Off-Wholesale Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 - Off-Superstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 - Off-Conventional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 - Off-Wine Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 - Off-Beer Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 - Off-Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 - Off-Cigarette Outlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 - Off-Limited/Assrtmnt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52 - Off-Natural/Gourmet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53 - Off-Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54 - Off-Superette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55 - Off-Supermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56 - Off-Supercenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 - Off-Category Killer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70 - Off-Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80 - Off-Mass Merch.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 - Off-Extended Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501 - On-Fine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>502 - On-Casual Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>503 - On-Theme Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>511 - On-Neighborhood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>512 - On-Casual Nightclub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>513 - On-Sports Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>514 - On-Prem Nightclub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>515 - On-Adult Ent.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>516 - On-Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>517 - On-Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>518 - On-Country Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>520 - On-Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>530 - On-Recreation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Line_Items__c</fullName>
        <description>NPA Rollout: Used to sum up number of active Promotion Material Item on Promotion.
The value for Item Status in the filter has been mentioned as &apos;0&apos; and not &apos;Active&apos; since there is a bug with the filter and does not work with translations.</description>
        <label>Has Line Items</label>
        <summaryFilterItems>
            <field>Promotion_Material_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Promotion_Material_Item__c.Promotion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IO_Fiscal_Tertile__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>NPA Rollout: Stores the Internal Order - Fiscal Year - Tertile combination for the Promotion</description>
        <label>IO Fiscal Tertile</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Internal_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NPA Rollout: Stores the related Internal Order</description>
        <label>Internal Order</label>
        <referenceTo>Internal_Order__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Brand_Building_Type__c</fullName>
        <inlineHelpText>Populates if type of spend is a brand building type</inlineHelpText>
        <label>Is Brand Building Type</label>
        <picklist>
            <controllingField>Spend_Type__c</controllingField>
            <picklistValues>
                <fullName>Invoice From Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice From 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <label>Legacy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_secondary_Placement__c</fullName>
        <description>shows the current position of a secondary placement [display] in outlet</description>
        <label>Location secondary  Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Checkout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Entrance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centre Aisle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End Aisle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Section (other category)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mark_for_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NPA Rollout: Used to mark promotions for deletion</description>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promotions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Account__r.Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Product_Group__c</fullName>
        <inlineHelpText>Filtered list based on brand and product class (old product group)</inlineHelpText>
        <label>Material Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mechanism__c</fullName>
        <description>INFOWELDERS</description>
        <label>Mechanism</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Bottles__c</fullName>
        <description>Number of Bottles which have been placed in the display over the period of duration of that display</description>
        <inlineHelpText>Please type in the number/amount of bottles  - that you haveplaced by time in the duartion of that secondary placement!</inlineHelpText>
        <label>Number of Bottles</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outlet_Class__c</fullName>
        <formula>Account__r.Outlet_Class__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <formula>Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Type__c</fullName>
        <inlineHelpText>Shows if deal selected is type PA</inlineHelpText>
        <label>PA Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bonus Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$ Loaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$ Rebated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$ Scan Deal (Rebated)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Particular_Agreement__c</fullName>
        <description>for pouring contracts only</description>
        <label>Particular Agreement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Indicator_Code__c</fullName>
        <description>NPA Rollout: Used to store the code corresponding to the premise selected on the promotion, for integration with SAP.</description>
        <label>Premise Indicator Code</label>
        <picklist>
            <controllingField>Promotion_Premise__c</controllingField>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Mix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Strength</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Activity_AUD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Promotion Activity Custom Lookup for Australia</description>
        <label>Promotion Activity</label>
        <referenceTo>Promotion_Activity__c</referenceTo>
        <relationshipLabel>Promotions (Promotion Activity)</relationshipLabel>
        <relationshipName>Promotions1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Infowelders</description>
        <label>Promotion Activity</label>
        <referenceTo>Promotion_Activity__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Category__c</fullName>
        <formula>text (Promotion_Activity__r.Promotion_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_End_Date_BFA__c</fullName>
        <description>Promotion End Date - BFA (With Date &amp; Time)</description>
        <label>Promotion End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Promotion_End_Date__c</fullName>
        <description>INFOWELDERS: Used by CRM.
NPA Rollout: Used to store the promotion end date.</description>
        <label>Promotion End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Goal_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Promotion Goal Lock</description>
        <label>Promotion Goal Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Mechanics__c</fullName>
        <label>Promotion Mechanics</label>
        <picklist>
            <picklistValues>
                <fullName>GWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price &amp; GWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price &amp; WIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Prize</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Number__c</fullName>
        <description>INFOWELDERS</description>
        <displayFormat>P-{YYYY}{00000}</displayFormat>
        <label>Promotion Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Promotion_Objective_Comments__c</fullName>
        <description>Promotion Objective Comments</description>
        <inlineHelpText>Enter the objective commentary for a promotion</inlineHelpText>
        <label>Promotion Objective Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Promotion_Premise__c</fullName>
        <description>NPA Rollout: Stores the Premise for the Promotion</description>
        <label>Premise</label>
        <picklist>
            <picklistValues>
                <fullName>On &amp; Off Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Result_Comments__c</fullName>
        <description>Promotion Results Commentary</description>
        <inlineHelpText>Enter the result comments for the promotion</inlineHelpText>
        <label>Promotion Result Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Promotion_Start_Date_BFA__c</fullName>
        <description>Start Date\Time for Australia</description>
        <inlineHelpText>Start Date\Time for Australia</inlineHelpText>
        <label>Promotion Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Promotion_Start_Date__c</fullName>
        <description>INFOWELDERS:Used by CRM.
        NPA Rollout: Used to store the promotion start date.</description>
        <label>Promotion Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Status__c</fullName>
        <description>NPA Rollout: Promotion Status to hold multiple status of National Promotion</description>
        <label>Promotion Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>